# gera-index

./: .gitignore  flake.nix  gera-index.cabal  shell.nix
.github/workflows/: runtest.yml
aggregator/: App.ts  package-lock.json  package.json  shell.nix  tsconfig.json
app/: Main.hs
lib/: Gera.hs  Twitter.hs
test/: Generator.hs  GeraTest.hs  Test.hs  TwitterTest.hs
test/gera-data/: audio.html  audiotag.html  deadline.html  episode.html  invalid_formatted_deadline.html  invalid_page.html  nodeadline.html  page.html  page_no_deadline.html  unexpected_deadline.html  unexpecteddeadline.html
test/twitter-api-data/tweet/: no_gera_link.json  with_gera_link.json
test/twitter-api-data/tweets/: all.json  correct.json
